# go-grpc-bazel-example

common-libs/: Makefile  README.md  WORKSPACE  go.mod  go.sum  go_repos.bzl
common-libs/api/: BUILD.bazel
common-libs/cmd/client/: BUILD.bazel  main.go
common-libs/cmd/server/: BUILD.bazel  main.go
common-libs/pkg/client/: BUILD.bazel  client.go
common-libs/pkg/common/: BUILD.bazel  common.go
common-libs/pkg/server/: BUILD.bazel  server.go
fx/common-libs/: Makefile  README.md  WORKSPACE  go_repos.bzl
fx/common-libs/api/: BUILD.bazel
fx/common-libs/cmd/client/: main.go
fx/common-libs/cmd/server/: main.go
fx/common-libs/pkg/client/: client.go
fx/common-libs/test/: helloworld.sh
fx/monitoring-libs/: README.md  go.mod  go.sum  go_repos.bzl
fx/monitoring-libs/cmd/client/: main.go
fx/monitoring-libs/cmd/server/: BUILD.bazel  main.go
fx/monitoring-libs/deploy/config/grafana/dashboards/: gRPC Server Overview-1578338064495.json
fx/monitoring-libs/deploy/config/grafana/provisioning/datasources/: all.yml
fx/monitoring-libs/deploy/config/prometheus/: prometheus.yml
fx/monitoring-libs/deploy/k8s/: deployment.yaml
fx/monitoring-libs/deploy/local/: docker-compose.yaml
fx/monitoring-libs/pkg/server/: health.go  module.go
fx/monitoring-libs/test/: histogram.sh
minimal/: BUILD.bazel  Makefile  WORKSPACE  go.sum  go_repos.bzl
minimal/cmd/client/: BUILD.bazel  main.go
minimal/pkg/client/: client.go
minimal/pkg/server/: BUILD.bazel  server.go  server_test.go
monitoring-libs/: BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum  go_repos.bzl
monitoring-libs/cmd/client/: main.go
monitoring-libs/cmd/server/: BUILD.bazel  main.go
monitoring-libs/cmd/server/config/: config.yaml
monitoring-libs/deploy/config/grafana/: grafana.ini
monitoring-libs/deploy/config/grafana/provisioning/dashboards/: all.yaml
monitoring-libs/pkg/client/: BUILD.bazel  client.go
monitoring-libs/pkg/common/: BUILD.bazel  common.go
monitoring-libs/pkg/server/: BUILD.bazel  greeter_server.go  health.go  module.go  server.go
