load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mt-inside/go-grpc-bazel-example/cmd/client",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/client:go_default_library",
        "//pkg/common:go_default_library",
        "@com_github_jawher_mow_cli//:go_default_library",
    ],
)

go_binary(
    name = "client",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
