load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mt-inside/go-grpc-bazel-example/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/common:go_default_library",
        "//pkg/server:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_binary(
    name = "server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
